Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus

TODO: when I release next public release, need to update https://community.notepad-plus-plus.org/post/51277 with new %LANGTYPE syntax

v0.001005 Development Version: Unreleased
    - update API for getNumberOpenFiles to correctly use the constants (#17)

v0.001004 Development Version: Unreleased
    - Reorganize the hash variables for easier and clearer use going forward

v0.001003 Development Version: Unreleased
    - editor->getLine() on an empty line will now correctly return an empty string, not "\0" (fixed #14)
    - make the editor->hwnd() a public method (instead of using editor()->{_hwnd})
    - make the notepad->hwnd() a public method (instead of using notepad()->{_hwnd})
    - add helper editor->getEOLString(): convert EOL Mode integer to a string
    - editor->getFileEndPosition(): gives the end position of the whole document
    - improve test coverage: add encoding names and getLanguageName coverage to npp-buffer.t
    - examples/ folder: adding more example usages
    - improve Editor documentation on ->findText and some other methods, and clean up set/get pairs,
        so they share the same information
    - improve Notepad documentation, especially fixing the link for menuCmdID source file;

v0.001002 2020-02-21
    - Bugfix: notepad()->addText() will now properly add text, and has test coverage (fixed #8)
    - Bugfix: notepad()->runMenuCommand() will now return undef (False) if the action is not found
    - Test suite: improve the npp-gui runMenuCommand() (fixed #11) and runPluginCommand tests
    - Test suite: 31-nppBeforeObject now doesn't try to use nonexistent environment variables (fixed #10)

v0.001001 2020-02-15
    - Fix some bugs in the test suite; improve diagnostics for more meaningful cpantesters reports
    - Propagate newest signing key to keyservers

v0.001 2020-02-13
    - Initial release

v0.000001
    - Initial pre-release development